# CodeTrail

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  install.ps1  install.sh
.cargo/: config.toml
docs/: 00-design-summary.md  01-architecture.md  01-product-positioning.md  02-command-contract.md  02-reliability-model.md  03-command-design.md  03-quality.md  04-agent-benchmark.md  04-rust-architecture.md  05-agent-usage.md  05-implementation-roadmap.md  06-index-and-hooks.md  07-index-algorithm-analysis.md  08-reference-architecture.md  09-agent-ide-principles.md  10-agent-search-command-surface.md  11-watcher-design.md  13-implementation-tasks.md  14-agent-team-mr-plan.md  19-performance-optimization-technical-plan.md
npm/: package.json
proto/: AGENTS.md
scip-indexer/: AGENTS.md  main.go
scripts/: AGENTS.md  analyze_swebench.py  bench.sh  prepare-ruoyi-fixture.sh  quality-gate.sh  test-installers.sh  upload-gitea-release-assets.sh
src/: AGENTS.md  batch_query.rs  benchmark_gate.rs  caveat_contract.rs  cli.rs  code_context.rs  commands.rs  completions.rs  config_facts.rs  config_index.rs  diff_proof.rs  generation_manifest.rs  go_provider.rs  graph_store.rs  index.rs  index_status.rs  install.rs  java_provider.rs  lancedb_store.rs  lib.rs  main.rs  navigation.rs  output.rs  path_compat.rs  project_graph.rs  provider_help.rs  query_input.rs  remote.rs  routes.rs  rust_provider.rs  saved_query.rs  scan_diagnostics.rs  scip_index.rs  scip_indexer.rs  scip_proto.rs  scip_provider.rs  search.rs  search_pattern.rs  semantic_facts.rs  (+5 more)
(+115 files in other folders)
